--- a/muzyk.html
+++ b/muzyk.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-    <title>Karolina Martinson</title>
-  <meta name="keywords" content="Karolina Martinson" />
+    <title>Karolina Stelmach</title>
+  <meta name="keywords" content="Karolina Stelmach" />
   <meta name="description" content="IFJ / AGH" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -29,7 +29,7 @@
     <h2>Muzyk</h2>
   
      <p align="justify">
-	Orkiestra Kosynierzy z Luborzycy: Cz³onek Zarz±du Stowarzyszenia Inicjatyw Kulturalnych "Kosynierzy" 
+	Orkiestra Kosynierzy z Luborzycy: CzÅ‚onek ZarzÄ…du Stowarzyszenia Inicjatyw Kulturalnych "Kosynierzy" 
 	w Luborzycy 23.03.2018 - 22.09.2019 <br><br>
 	Flecistka w Orkiestrze "Wieniawa" w latach 04.2011 - 08.2019<br><br>
 	 
@@ -65,11 +65,11 @@
     <div class="nav">
      <h1>Menu</h1>
      <ul>
-     <li><a href="http://orion.fis.agh.edu.pl/~Martinson/">Strona g³ówna</a></li>
-       <li><a href="http://orion.fis.agh.edu.pl/~Martinson/publikacje.html">Publikacje</a></li>
-        <li><a href="http://orion.fis.agh.edu.pl/~Martinson/dzialanosc.html">Dzia³alno¶æ naukowa</a></li>
-		 <li><a href="http://orion.fis.agh.edu.pl/~Martinson/nagrody.html">Nagrody</a></li>
-       <li><a href="http://orion.fis.agh.edu.pl/~Martinson/kontakt.html">Kontakt</a></li>
+     <li><a href="index.html">Strona gÅ‚Ã³wna</a></li>
+       <li><a href="publikacje.html">Publikacje</a></li>
+        <li><a href="dzialanosc.html">DziaÅ‚alnoÅ›Ä‡ naukowa</a></li>
+		 <li><a href="nagrody.html">Nagrody</a></li>
+       <li><a href="kontakt.html">Kontakt</a></li>
      
 
 
@@ -79,9 +79,9 @@
      <div class="nav">
      <h1>O mnie</h1>
      <ul>
-      <li><a href="http://orion.fis.agh.edu.pl/~Martinson/dydaktyka.html">Kursy i szkolenia</a></li>
-      <li><a href="http://orion.fis.agh.edu.pl/~Martinson/zestawy.html">Pedagog</a></li>
-	  <li><a href="http://orion.fis.agh.edu.pl/~Martinson/konsultacje.html">Muzyk</a></li>
+      <li><a href="kursy.html">Kursy i szkolenia</a></li>
+      <li><a href="pedagog.html">Pedagog</a></li>
+	  <li><a href="muzyk.html">Muzyk</a></li>
      
      </ul>
     </div>
@@ -99,17 +99,17 @@
    <div class="footer-box">
 
     <h3>Adres</h3>
-    <p><span>Instytut Fizyki J±drowej <br />Polskiej Akademii Nauk</span></p>
+    <p><span>Instytut Fizyki JÄ…drowej <br />Polskiej Akademii Nauk</span></p>
     <p>ul. Radzikowskiego 152<br />
-    31-342 Kraków</p>
+    31-342 KrakÃ³w</p>
   
    </div>
    
    <div class="footer-box">
    	<h3>Kontakt</h3>
-    <p><span>Karolina Martinson</span></p>
+    <p><span>Karolina Stelmach</span></p>
     <p>tel.: 12 662 8204
-    <br />e-mail: <a href="mailto:msd@ifj.edu.pl">karolina.martinson@ifj.edu.pl</a></p>
+    <br />e-mail: <a href="mailto:msd@ifj.edu.pl">karolina.Stelmach@ifj.edu.pl</a></p>
    
    </div>
    
