--- a/nagrody.html
+++ b/nagrody.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-    <title>Karolina Martinson</title>
-  <meta name="keywords" content="Karolina Martinson" />
+    <title>Karolina Stelmach</title>
+  <meta name="keywords" content="Karolina Stelmach" />
   <meta name="description" content="IFJ / AGH" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -32,7 +32,7 @@
 	 founded by the International Institute of Noise Control Engineering 
 	 (I-INCE), Seul, August 2020
 	 <br><br>
-<b>1st prize </b>for the best poster presentation during 45 Zjazd Fizyków Polskich in Cracow, 13-18 September 2019
+<b>1st prize </b>for the best poster presentation during 45 Zjazd FizykÃ³w Polskich in Cracow, 13-18 September 2019
 	 <br><br>
 <b>Prize </b>for the best educational lecture during conference entitled: "Dynamical Properties of 
 Solids XXXVI International Symposium Cracow" for oral speech entitled 
@@ -70,11 +70,11 @@ Solids XXXVI International Symposium Cracow" for oral speech entitled
     <div class="nav">
      <h1>Menu</h1>
      <ul>
-     <li><a href="http://orion.fis.agh.edu.pl/~Martinson/">Strona g³ówna</a></li>
-       <li><a href="http://orion.fis.agh.edu.pl/~Martinson/publikacje.html">Publikacje</a></li>
-        <li><a href="http://orion.fis.agh.edu.pl/~Martinson/dzialanosc.html">Dzia³alno¶æ naukowa</a></li>
-		 <li><a href="http://orion.fis.agh.edu.pl/~Martinson/nagrody.html">Nagrody</a></li>
-       <li><a href="http://orion.fis.agh.edu.pl/~Martinson/kontakt.html">Kontakt</a></li>
+     <li><a href="index.html">Strona gÅ‚Ã³wna</a></li>
+       <li><a href="publikacje.html">Publikacje</a></li>
+        <li><a href="dzialanosc.html">DziaÅ‚alnoÅ›Ä‡ naukowa</a></li>
+		 <li><a href="nagrody.html">Nagrody</a></li>
+       <li><a href="kontakt.html">Kontakt</a></li>
      
 
 
@@ -84,9 +84,9 @@ Solids XXXVI International Symposium Cracow" for oral speech entitled
      <div class="nav">
      <h1>O mnie</h1>
      <ul>
-      <li><a href="http://orion.fis.agh.edu.pl/~Martinson/dydaktyka.html">Kursy i szkolenia</a></li>
-      <li><a href="http://orion.fis.agh.edu.pl/~Martinson/zestawy.html">Pedagog</a></li>
-	  <li><a href="http://orion.fis.agh.edu.pl/~Martinson/konsultacje.html">Muzyk</a></li>
+      <li><a href="kursy.html">Kursy i szkolenia</a></li>
+      <li><a href="pedagog.html">Pedagog</a></li>
+	  <li><a href="muzyk.html">Muzyk</a></li>
      
      </ul>
     </div>
@@ -104,15 +104,15 @@ Solids XXXVI International Symposium Cracow" for oral speech entitled
    <div class="footer-box">
 
     <h3>Adres</h3>
-    <p><span>Instytut Fizyki J±drowej <br />Polskiej Akademii Nauk</span></p>
+    <p><span>Instytut Fizyki JÄ…drowej <br />Polskiej Akademii Nauk</span></p>
     <p>ul. Radzikowskiego 152<br />
-    31-342 Kraków</p>
+    31-342 KrakÃ³w</p>
   
    </div>
    
    <div class="footer-box">
    	<h3>Kontakt</h3>
-    <p><span>Karolina Martinson</span></p>
+    <p><span>Karolina Stelmach</span></p>
     <p>tel.: 12 662 8204
     <br />e-mail: <a href="mailto:msd@ifj.edu.pl">karolina.martinson@ifj.edu.pl</a></p>
    
