--- a/dzialanosc.html
+++ b/dzialanosc.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
     <title>Karolina Stelmach</title>
-  <meta name="keywords" content="Karolina Martinson" />
+  <meta name="keywords" content="Karolina Stelmach" />
   <meta name="description" content="IFJ / AGH" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -34,12 +34,22 @@
 	"Fizyczne, Chemiczne i Biofizyczne Podstawy Nowoczesnych Technologii i Inżynierii Materiałowej" (FCB)", 
 	The H. Niewodniczański Institute of Nuclear Physics Polish Academy of Sciences and AGH University of Science and Technology.
 <br><br>
+
+
 <b>Presentations at scientific conferences</b><br><br>
+
+Wykład na zaproszenie dla uczniów ze szkół średnich pt.: ,,Percepcja krótkich sygnałów
+dźwiękowych. Organizowany przez Polskie Towarzystwo Fizyczne, Oddział w Białymstoku
+zaprezentowany 26 marca 2022".<br><br>
+
+Wykład pt.: ,,Fizyczne i fizjologiczne aspekty percepcji skrajnie krótkich sygnałów". Zakład fizyki biomedycznej
+Uniwersytetu Warszawskiego, 9 grudnia 2021, Warszawa.<br><br>
+
 7-11 September 2020, Oral presentation entitled: "Absolute Threshold Needed to Define the Frequency of the
-Sound", during: "5th Grandmaster Early-Career Workshop in Physics", Prague, Czech Republic. 
+Sound", during: "5th Grandmaster Early-Career Workshop in Physics", Prague, Czech Republic. <br><br>
 
 23-26 August 2020, Oral presentation entitled:  "The Behavioral Test and Measurements of the Artificial Head's Responses Involving the Short Sounds with the Gaussian Envelope"
-during: Inter Noise 2020 e-congress, Seul, Korea.
+during: Inter Noise 2020 e-congress, Seul, Korea.<br><br>
 
 14-18 October 2019, Poster presentation entitled: "The Statistical Properties of Tonal and Atonal Music Pieces" during
 "14th International Symposium on Computer Music Multidisciplinary Research (CMMR)", Marseille, France.<br><br>
@@ -143,6 +153,8 @@ in cooperation with Department of Mechanics and Vibroacoustics, AGH University o
       <li><a href="kursy.html">Kursy i szkolenia</a></li>
       <li><a href="pedagog.html">Pedagog</a></li>
 	  <li><a href="muzyk.html">Muzyk</a></li>
+    <li><a href="tester.html">Tester</a></li>
+    <li><a href="podroze.html">Podróże</a></li>
      
      </ul>
     </div>
@@ -168,9 +180,9 @@ in cooperation with Department of Mechanics and Vibroacoustics, AGH University o
    
    <div class="footer-box">
    	<h3>Kontakt</h3>
-    <p><span>Karolina Martinson</span></p>
+    <p><span>Karolina Stelmach</span></p>
     <p>tel.: 12 662 8204
-    <br />e-mail: <a href="mailto:msd@ifj.edu.pl">karolina.martinson@ifj.edu.pl</a></p>
+      <br />e-mail: karolina.martinson@ifj.edu.pl</p>
    
    </div>
    
