--- a/kontakt.html
+++ b/kontakt.html
@@ -87,6 +87,8 @@
       <li><a href="kursy.html">Kursy i szkolenia</a></li>
       <li><a href="pedagog.html">Pedagog</a></li>
 	  <li><a href="muzyk.html">Muzyk</a></li>
+    <li><a href="tester.html">Tester</a></li>
+    <li><a href="podroze.html">Podróże</a></li>
      
      </ul>
     </div>
@@ -113,7 +115,7 @@
    	<h3>Kontakt</h3>
     <p><span>Karolina Stelmach</span></p>
     <p>tel.: 12 662 8204
-    <br />e-mail: <a href="mailto:msd@ifj.edu.pl">karolina.martinson@ifj.edu.pl</a></p>
+      <br />e-mail: karolina.martinson@ifj.edu.pl</p>
    
    </div>
    
