--- a/publikacje.html
+++ b/publikacje.html
@@ -29,6 +29,10 @@
     <h2>Publikacje</h2>
   
      <p align="justify">
+
+  Marcin Majka, Karolina Stelmach, Jarosław Rubacha, Tadeusz Kamisiński, Piotr Zieliński, "Osobliwości percepcji bardzo krótkich sygnałów dźwiękowych: konsekwencje zasady nieokreśloności".
+Informacyjna Koncepcja przestrzeni dziea muzycznego. p. 95-118, ISBN: 978-83-940098-7-8
+      <br><br>   
 	 
 	 K. Martinson, P. Zieliński, "The Statistical Properties of Tonal and Atonal Music Pieces",
 	 Procedings of the 14th International Symposium on CMMR, p. 815-822, Marseille, France, October 14-18 2019
@@ -101,6 +105,8 @@ konsekwencje zasady nieokreśloności", Materiały konferencyjne
       <li><a href="kursy.html">Kursy i szkolenia</a></li>
       <li><a href="pedagog.html">Pedagog</a></li>
 	  <li><a href="muzyk.html">Muzyk</a></li>
+    <li><a href="tester.html">Tester</a></li>
+    <li><a href="podroze.html">Podróże</a></li>
      
      </ul>
     </div>
@@ -128,7 +134,7 @@ konsekwencje zasady nieokreśloności", Materiały konferencyjne
    	<h3>Kontakt</h3>
     <p><span>Karolina Stelmach</span></p>
     <p>tel.: 12 662 8204
-    <br />e-mail: <a href="mailto:msd@ifj.edu.pl">karolina.martinson@ifj.edu.pl</a></p>
+      <br />e-mail: karolina.martinson@ifj.edu.pl</p>
    
    </div>
    
