--- a/muzyk.html
+++ b/muzyk.html
@@ -29,6 +29,7 @@
     <h2>Muzyk</h2>
   
      <p align="justify">
+  <a href="https://smkos.pl/obsadaKOS.html">Krakowska Orkiestra Staromiejska</a> flet, gitara basowa, 1.11.2019 - obecnie <br><br>
 	Orkiestra Kosynierzy z Luborzycy: Członek Zarządu Stowarzyszenia Inicjatyw Kulturalnych "Kosynierzy" 
 	w Luborzycy 23.03.2018 - 22.09.2019 <br><br>
 	Flecistka w Orkiestrze "Wieniawa" w latach 04.2011 - 08.2019<br><br>
@@ -82,6 +83,8 @@
       <li><a href="kursy.html">Kursy i szkolenia</a></li>
       <li><a href="pedagog.html">Pedagog</a></li>
 	  <li><a href="muzyk.html">Muzyk</a></li>
+    <li><a href="tester.html">Tester</a></li>
+    <li><a href="podroze.html">Podróże</a></li>
      
      </ul>
     </div>
@@ -109,7 +112,7 @@
    	<h3>Kontakt</h3>
     <p><span>Karolina Stelmach</span></p>
     <p>tel.: 12 662 8204
-    <br />e-mail: <a href="mailto:msd@ifj.edu.pl">karolina.Stelmach@ifj.edu.pl</a></p>
+      <br />e-mail: karolina.martinson@ifj.edu.pl</p>
    
    </div>
    
