--- a/pedagog.html
+++ b/pedagog.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
     <title>Karolina Stelmach</title>
-  <meta name="keywords" content="Karolina Martinson" />
+  <meta name="keywords" content="Karolina Stelmach" />
   <meta name="description" content="IFJ / AGH" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -32,8 +32,11 @@
 		Wychowawca kolonijny: 7-19 Lipca 2019, Rowy, Polska, organizator: Biuro podróy "Antałek"<br><br>
 		Kierownik wypoczynku: 25.07 - 1.08.2019, Biały Dunajec, Polska, organizator: Stowarzyszenie Inicjatyw Kulturalnych "Kosynierzy".<br><br>
 		Wchowawca pókolonii: 5-16 sierpnia 2019, Niepołomice, Polska, organizator: Szkoła językowa "Bright".<br><br>
-		Kierownik wypoczynku: Bright "MiniCamp 2018", Niepołomice, Polska.<br><br>
+		Kierownik wypoczynku: Bright "MiniCamp 2018", Niepołomice, Polska.<br><br></p>
 	 <h3>Rok szkolny</h3>
+   <p align="justify"></p>
+   2022/2023 Nauczyciel śpiewu i muzyki w scholi przy parafii św. Wojciecha w Krakowie
+   2021/2022 Nauczyciel śpiewu i muzyki w scholi przy parafii św. Wojciecha w Krakowie
 	 2018/2019 Lektor j. angielskiego w szkole językowej Bright<br><br>
 	 </p>
     
@@ -82,6 +85,8 @@
       <li><a href="kursy.html">Kursy i szkolenia</a></li>
       <li><a href="pedagog.html">Pedagog</a></li>
 	  <li><a href="muzyk.html">Muzyk</a></li>
+    <li><a href="tester.html">Tester</a></li>
+    <li><a href="podroze.html">Podróże</a></li>
      
      </ul>
     </div>
@@ -109,7 +114,7 @@
    	<h3>Kontakt</h3>
     <p><span>Karolina Stelmach</span></p>
     <p>tel.: 12 662 8204
-    <br />e-mail: <a href="mailto:msd@ifj.edu.pl">karolina.martinson@ifj.edu.pl</a></p>
+      <br />e-mail: karolina.martinson@ifj.edu.pl</p>
    
    </div>
    
